--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -1,95 +1,131 @@
-﻿@{
+﻿@using WC.YouthLearning.Models
+@model List<student>
+@{
     ViewData["Title"] = "Home Page";
 }
+<div class="container my-2 ">
+    <div class="row justify-content-center ">
+        <div class="col-lg-9 col-12">
+            <div class="pt-3 my-2 col-12 shadow-sm text-left bg-white">
+                <div>
+                    @foreach (student k in Model)
+                    {
+                        <p>@k.name</p>
+                    }
+                    <h4><strong>这是一个标题</strong></h4>
+                    <p>这里应该放一些内容，可是目前还没有想好写什么</p>
+                    <a class="text-info">详细了解</a>
+                    <hr>
+                </div>
+                <div>
+                    <h4><strong>这是一个标题</strong></h4>
+                    <p>这里应该放一些内容，可是目前还没有想好写什么</p>
+                    <a class="text-info">详细了解</a>
+                    <hr>
+                </div>
+                <div>
+                    <h4><strong>这是一个标题</strong></h4>
+                    <p>这里应该放一些内容，可是目前还没有想好写什么</p>
+                    <a class="text-info">详细了解</a>
+                    <hr>
+                </div>
+                <div>
+                    <h4><strong>这是一个标题</strong></h4>
+                    <p>这里应该放一些内容，可是目前还没有想好写什么</p>
+                    <a class="text-info">详细了解</a>
+                    <hr>
+                </div>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        @ViewBag.Name
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
             </div>
         </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+        <div class="col-lg-3 col-12 my-2 row">
+            <div class="pt-3  col-12 shadow-sm text-center bg-white">
+                <div class="row   ">
+                    <div class="col-xl-3 col-lg-6 col-3">
+                        <img src=".\images\分享共享.png" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">分享</figcaption>
+                    </div>
+                    <div class="col-xl-3  col-lg-6 col-3">
+                        <img src=".\images\列表清单.png" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">清单</figcaption>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-3">
+                        <img src=".\images\通知公告.png" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption ">公告</figcaption>
+                    </div>
+                    <figure class="col-xl-3 col-lg-6 col-3">
+                        <img src=".\images\邮件邮箱.png" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">邮件</figcaption>
+                    </figure>
+                </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+                <div class="row">
+                    <div class="col-6 border-top p-2">
+                        前台
+                    </div>
+                    <div class="col-6 border-top border-left p-2">
+                        后台
+                    </div>
+                </div>
+            </div>
+
+            <div class="pt-3 my-2 col-12  shadow-sm text-center bg-white">
+                <div class="row border-bottom">
+                    <div class="col-12 ">
+                        <p><img style="height:24px" src=".\images\sub_account.png" class="img-fluid" />个人中心</p>
+                    </div>
+                </div>
+                <div class="row my-2 " style="color:darkgray">
+                    <div class="col-6 border-right p-2">
+                        <a>今日银收</a><br />
+                        <a class="text-primary"><strong>168</strong></a><br />
+                        <a><small>较前日上升<span class="text-primary">123%</span></small></a>
+                    </div>
+                    <div class="col-6 p-2">
+                        <a>今日银收</a><br />
+                        <a class="text-primary"><strong>168</strong></a><br />
+                        <a><small>较前日上升<span class="text-primary">123%</span></small></a>
+                    </div>
+                </div>
+                <div class="row border-top pt-2
+">
+                    <div class="col-12 ">
+                        <p>阿里云安全保护中</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="my-2 col-12 shadow-sm">
+                <div class="row">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src=".\images\3e3ce85346f6b5b9a3eb53d813d47780.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src=".\images\22a9106001f83c855e968d90c66d8cc8.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src=".\images\d7aa640a17da9cf651edaa48f49d0870.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <footer class="col" style="color:darkgray">
+                <hr />
+                <a> 江西服装学院-作业 &nbsp;</a> <br />
+                <a>&copy; 2020 - 饭桶爱大米 &nbsp;</a> <br />
+                <a style="color:darkgray" href="http://www.beian.miit.gov.cn/">赣ICP备20007874号</a> <br />
+                <a style="color:darkgray" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012102000233">
+                    <img src="D:\Download\备案图标.png" />
+                    赣公网安备 36012102000233号
+                </a>
+                <br />
+                <a>友情链接：</a><a style="color:darkgray" href="http://yicraftcore.com/">意界</a>
+            </footer>
+        </div>
     </div>
 </div>
