--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <button id="delall" class="btn btn-danger delall">全部重置</button>
                     @foreach (student k in Model)
                     {
-                        <p>@k.name<button id="del" class="btn btn-danger del">重置</button></p> 
+                        <p>@k.name<a href="/Home/Reset/@k.id"><input type="button" id="del" value="重置" class="btn btn-danger del"></a></p> 
                     }
                     <h4><strong>这是一个标题</strong></h4>
                     <p>这里应该放一些内容，可是目前还没有想好写什么</p>
