--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -9,10 +9,28 @@
         <div class="col-lg-9 col-12">
             <div class="pt-3 my-2 col-12 shadow-sm text-left bg-white">
                 <div>
-                    <button id="delall" class="btn btn-danger delall">全部重置</button>
+                    <form method="post" action="/UploadImage/Index" enctype="multipart/form-data">
+                        <input type="text" name="name" id="name" />
+                        <div id="imgUploadX"></div>
+                        <input style="display: none;" type="file" id="uploadFile" class="clip" accept="image/*">
+                        <label class="ui-button ui-button-primary" for="uploadFile">选择图片</label>
+                        <input type="submit" value="提交" />
+                    </form>
+                    <a href="/Home/ResetAll"><input type="button" id="delall" class="btn btn-danger delall" value="全部重置"></a>
                     @foreach (student k in Model)
                     {
-                        <p>@k.name<a href="/Home/Reset/@k.id"><input type="button" id="del" value="重置" class="btn btn-danger del"></a></p> 
+                        @if (k.sub == 0)
+                        {
+                            <p class="text-warning">@k.sid@k.name<a href="/Home/Reset/@k.id"><input type="button" id="del" value="重置" class="btn btn-danger del"></a></p>
+                            <p>@k.time</p>
+                            <p>积分：@k.num</p>
+                        }
+                        else
+                        {
+                            <p class="text-primary">@k.sid@k.name<a href="/Home/Reset/@k.id"><input type="button" id="del" value="重置" class="btn btn-danger del"></a></p>
+                            <p>@k.time</p>
+                            <p>积分：@k.num</p>
+                        }
                     }
                     <h4><strong>这是一个标题</strong></h4>
                     <p>这里应该放一些内容，可是目前还没有想好写什么</p>
@@ -132,6 +150,61 @@
     </div>
 </div>
 <script>
+    var eleUploadFile = document.getElementById('uploadFile');
+    var eleImgUploadX = document.getElementById('imgUploadX');
+    if (history.pushState) {
+        eleUploadFile.addEventListener('change', function (event) {
+            var reader = new FileReader();
+            var file = event.target.files[0] || event.dataTransfer.files[0];
+            reader.onload = function (e) {
+                var base64 = e.target.result;
+                if (base64.length > 1024 * 500) {
+                    alert('图片尺寸请小于500K');
+                    return;
+                } else {
+                    // 使用canvas合成图片，并base64化
+                    imgTogether(base64, function (url) {
+                        // 尺寸
+                        var size = 180 / (window.devicePixelRatio || 1);
+                        // 预览
+                        event.target.files[0] = url;
+                        eleImgUploadX.innerHTML = '<img  src="' + url + '" width="' + size + '" height="' + size + '"><input style="display:none" id="myimg" name="myimg"  type="text" value="' + url + '"/>'
+                    });
+                }
+            };
+            reader.readAsDataURL(file);
+        });
+
+        // canvas图片合成
+        var imgTogether = function (url, callback) {
+            var canvas = document.createElement('canvas');
+            var size = 500;
+            canvas.width = size;
+            canvas.height = size;
+
+            var context = canvas.getContext('2d');
+
+            // 这是上传图像
+            var imgUpload = new Image();
+            imgUpload.setAttribute("crossOrigin", 'Anonymous');
+            imgUpload.onload = function () {
+                // 绘制
+                context.drawImage(imgUpload, 0, 0, size, size, 0, 0, size, size);
+                // 再次绘制
+                var imgname = document.getElementById('name').value;
+                context.font = "50px Verdana";
+                context.fillText(imgname, 10, 50, 250);
+                // 回调
+                callback(canvas.toDataURL('image/png'));
+            };
+            imgUpload.src = url;
+        };
+    } else if (eleImgUploadX) {
+        eleImgUploadX.className = 'remind';
+        eleImgUploadX.innerHTML = '本演示IE10+下才有效果';
+    }
+</script>
+<script>
     $(function () {
         $(".del").hide();
         $(".delall").hide();
@@ -140,8 +213,9 @@
             if (data == "ok") {
                 $(".del").show();
                 $(".delall").show();
-            }}
-);
+            }
+        }
+        );
 
 
     });
