--- a/WC.YouthLearning/Views/Home/Index.cshtml
+++ b/WC.YouthLearning/Views/Home/Index.cshtml
@@ -3,8 +3,19 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .del {
+        display: none;
+    }
 
-<div class="container my-2 ">
+    .delall {
+        display: none;
+    }
+    .p-my {
+        font-size:24px
+    }
+</style>
+<div class="container my-2 con ">
     <div class="row justify-content-center ">
         <div class="col-lg-9 col-12">
             <div class="pt-3 my-2 col-12 shadow-sm text-left bg-white">
@@ -59,93 +70,95 @@
             </div>
         </div>
         <div class="col-lg-3 col-12 my-2 row">
-            <div class="pt-3  col-12 shadow-sm text-center bg-white">
-                <div class="row   ">
-                    <div class="col-xl-3 col-lg-6 col-3">
-                        <img src=".\images\分享共享.png" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption">分享</figcaption>
+            <div>
+                <div class="pt-3  col-12 shadow-sm text-center bg-white">
+                    <div class="row   ">
+                        <div class="col-xl-3 col-lg-6 col-3">
+                            <img src=".\images\分享共享.png" class="figure-img img-fluid rounded" alt="...">
+                            <figcaption class="figure-caption">分享</figcaption>
+                        </div>
+                        <div class="col-xl-3  col-lg-6 col-3">
+                            <img src=".\images\列表清单.png" class="figure-img img-fluid rounded" alt="...">
+                            <figcaption class="figure-caption">清单</figcaption>
+                        </div>
+                        <div class="col-xl-3 col-lg-6 col-3">
+                            <img src=".\images\通知公告.png" class="figure-img img-fluid rounded" alt="...">
+                            <figcaption class="figure-caption ">公告</figcaption>
+                        </div>
+                        <figure class="col-xl-3 col-lg-6 col-3">
+                            <img src=".\images\邮件邮箱.png" class="figure-img img-fluid rounded" alt="...">
+                            <figcaption class="figure-caption">邮件</figcaption>
+                        </figure>
                     </div>
-                    <div class="col-xl-3  col-lg-6 col-3">
-                        <img src=".\images\列表清单.png" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption">清单</figcaption>
+
+                    <div class="row">
+                        <div class="col-6 border-top p-2">
+                            前台
+                        </div>
+                        <div class="col-6 border-top border-left p-2">
+                            后台
+                        </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-3">
-                        <img src=".\images\通知公告.png" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption ">公告</figcaption>
-                    </div>
-                    <figure class="col-xl-3 col-lg-6 col-3">
-                        <img src=".\images\邮件邮箱.png" class="figure-img img-fluid rounded" alt="...">
-                        <figcaption class="figure-caption">邮件</figcaption>
-                    </figure>
                 </div>
 
-                <div class="row">
-                    <div class="col-6 border-top p-2">
-                        前台
+                <div class="pt-3 my-2 col-12  shadow-sm text-center bg-white">
+                    <div class="row border-bottom">
+                        <div class="col-12 ">
+                            <p><img style="height:24px" src=".\images\sub_account.png" class="img-fluid" />个人中心</p>
+                        </div>
                     </div>
-                    <div class="col-6 border-top border-left p-2">
-                        后台
+                    <div class="row my-2 " style="color:darkgray">
+                        <div class="col-6 border-right p-2">
+                            <a>今日银收</a><br />
+                            <a class="text-primary"><strong>168</strong></a><br />
+                            <a><small>较前日上升<span class="text-primary">123%</span></small></a>
+                        </div>
+                        <div class="col-6 p-2">
+                            <a>今日银收</a><br />
+                            <a class="text-primary"><strong>168</strong></a><br />
+                            <a><small>较前日上升<span class="text-primary">123%</span></small></a>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="pt-3 my-2 col-12  shadow-sm text-center bg-white">
-                <div class="row border-bottom">
-                    <div class="col-12 ">
-                        <p><img style="height:24px" src=".\images\sub_account.png" class="img-fluid" />个人中心</p>
-                    </div>
-                </div>
-                <div class="row my-2 " style="color:darkgray">
-                    <div class="col-6 border-right p-2">
-                        <a>今日银收</a><br />
-                        <a class="text-primary"><strong>168</strong></a><br />
-                        <a><small>较前日上升<span class="text-primary">123%</span></small></a>
-                    </div>
-                    <div class="col-6 p-2">
-                        <a>今日银收</a><br />
-                        <a class="text-primary"><strong>168</strong></a><br />
-                        <a><small>较前日上升<span class="text-primary">123%</span></small></a>
-                    </div>
-                </div>
-                <div class="row border-top pt-2
+                    <div class="row border-top pt-2
 ">
-                    <div class="col-12 ">
-                        <p>阿里云安全保护中</p>
+                        <div class="col-12 ">
+                            <p>阿里云安全保护中</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="my-2 col-12 shadow-sm">
-                <div class="row">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src=".\images\3e3ce85346f6b5b9a3eb53d813d47780.jpeg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src=".\images\22a9106001f83c855e968d90c66d8cc8.jpeg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src=".\images\d7aa640a17da9cf651edaa48f49d0870.jpeg" class="d-block w-100" alt="...">
+                <div class="my-2 col-12 shadow-sm">
+                    <div class="row">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src=".\images\3e3ce85346f6b5b9a3eb53d813d47780.jpeg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src=".\images\22a9106001f83c855e968d90c66d8cc8.jpeg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src=".\images\d7aa640a17da9cf651edaa48f49d0870.jpeg" class="d-block w-100" alt="...">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+                <footer class="col" style="color:darkgray">
+                    <hr />
+                    <a> 江西服装学院-作业 &nbsp;</a> <br />
+                    <a>&copy; 2020 - 饭桶爱大米 &nbsp;</a> <br />
+                    <a style="color:darkgray" href="http://www.beian.miit.gov.cn/">赣ICP备20007874号</a> <br />
+                    <a style="color:darkgray" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012102000233">
+                        <img src="D:\Download\备案图标.png" />
+                        赣公网安备 36012102000233号
+                    </a>
+                    <br />
+                    <a>友情链接：</a><a style="color:darkgray" href="http://yicraftcore.com/">意界</a>
+                </footer>
             </div>
-
-
-            <footer class="col" style="color:darkgray">
-                <hr />
-                <a> 江西服装学院-作业 &nbsp;</a> <br />
-                <a>&copy; 2020 - 饭桶爱大米 &nbsp;</a> <br />
-                <a style="color:darkgray" href="http://www.beian.miit.gov.cn/">赣ICP备20007874号</a> <br />
-                <a style="color:darkgray" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012102000233">
-                    <img src="D:\Download\备案图标.png" />
-                    赣公网安备 36012102000233号
-                </a>
-                <br />
-                <a>友情链接：</a><a style="color:darkgray" href="http://yicraftcore.com/">意界</a>
-            </footer>
         </div>
     </div>
 </div>
@@ -206,8 +219,24 @@
 </script>
 <script>
     $(function () {
-        $(".del").hide();
-        $(".delall").hide();
+        $(window).resize(function () {
+            if (screen.width >= 1200) {
+                $(".con").addClass("container");
+                $("p").removeClass(".p-my");
+            } else if (screen.width >= 992) {
+                $(".con").removeClass("container");
+                $("p").addClass(".p-my");
+            } else {
+                $(".con").removeClass("container");
+                $("p").addClass(".p-my");
+            }
+        })
+       
+
+
+
+
+
         $.get("/Home/Exite", function (data) {
             console.log(data);
             if (data == "ok") {
