--- a/WC.YouthLearning/Views/Shared/_Layout.cshtml
+++ b/WC.YouthLearning/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=8.0">
     <title>Bootstrap 实例 - 一个简单的网页</title>
     <link href="~/css/bootstrap.css" rel="stylesheet" />
 
@@ -22,8 +23,10 @@
         }
     </style>
 </head>
-<body class="bg-light" style="height:1800px; ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+<body class="" style="        height: 1800px;
+        background-color: #F6F6F6
+">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <a class="navbar-brand" href="#">饭桶</a>
         <form class="form-inline my-2 my-lg-0 d-lg-none">
             <input class="form-control mr-sm-2" type="search" placeholder="搜索内容" aria-label="Search">
