--- a/WC.YouthLearning/Views/Shared/_Layout.cshtml
+++ b/WC.YouthLearning/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=8.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
     <title>Bootstrap 实例 - 一个简单的网页</title>
     <link href="~/css/bootstrap.css" rel="stylesheet" />
 
@@ -24,14 +24,11 @@
     </style>
 </head>
 <body class="" style="        height: 1800px;
-        background-color: #F6F6F6
+        background-color: #F6F6F6;overflow-x:hidden
 ">
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <a class="navbar-brand" href="#">饭桶</a>
-        <form class="form-inline my-2 my-lg-0 d-lg-none">
-            <input class="form-control mr-sm-2" type="search" placeholder="搜索内容" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
-        </form>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
